--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Placeholder</title>
+<title>Thanks for visiting!</title>
 </head>
-<body>Placeholder</body>
+<body>Coming soon...</body>
 </html>
