Adding meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="" content="">
 <title>Thanks for visiting!</title>
 </head>
 <body>Coming soon...</body>
