--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="" content="">
+<meta name="version" content="0.1">
 <title>Thanks for visiting!</title>
 </head>
 <body>Coming soon...</body>
